# webserver-redis-influxdb-postgres-nginx-docker

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json
.github/workflows/: rust.yml
client/examples/: send.rs
client/src/: lib.rs
contracts/: Cargo.toml
contracts/src/: lib.rs  list.rs  methods.rs  queue.rs  shape.rs
contracts/src/list/: add_list_item.rs  delete_list_item.rs  get_list_items.rs  get_list_types.rs  mod.rs  rename_list_type.rs
contracts/src/methods/: sas.rs  shape.rs
contracts/src/methods/list/: add_list_item.rs  delete_list_item.rs  get_list_items.rs  get_list_types.rs  rename_list_type.rs
contracts/src/methods/server/: sleep.rs
contracts/src/methods/shape/: add_shape.rs  add_shape_tag.rs  add_shapes.rs  delete_shape.rs  delete_shape_tag.rs  get_nearby_shapes.rs  get_shape.rs  search_shapes_by_tags.rs
contracts/src/server/: mod.rs  sleep.rs
contracts/src/shape/: add_shape.rs  add_shape_tag.rs  add_shapes.rs  delete_shape.rs  delete_shape_tag.rs  get_nearby_shapes.rs  get_shape.rs  search_shapes_by_tags.rs
data/: webserver.db
database/: Cargo.toml
database/src/: lib.rs  list.rs  queue.rs  server.rs  shape.rs
libs/client/: Cargo.toml
libs/client/src/: lib.rs
libs/db/: Cargo.toml
libs/db/src/: lib.rs  prediction.rs  user.rs
libs/methods/: Cargo.toml
libs/methods/src/: lib.rs
libs/methods/src/prediction/: controller.rs  mod.rs
libs/methods/src/server/: controller.rs  mod.rs
libs/methods/src/user/: controller.rs  mod.rs
libs/mqtt/: Cargo.toml
libs/webserver_contracts/: Cargo.toml
libs/webserver_contracts/src/: lib.rs
libs/webserver_contracts/src/chess/: mod.rs
libs/webserver_contracts/src/mqtt/: mod.rs
libs/webserver_contracts/src/prediction/: mod.rs
libs/webserver_contracts/src/server/: mod.rs
libs/webserver_contracts/src/user/: mod.rs
notifications/: Cargo.toml
notifications/src/: main.rs
redis/: redis.conf
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/src/: app.rs  influx.rs  main.rs  notification.rs  redis.rs  token.rs
server/src/controller/: list.rs  server.rs  shape.rs
server/src_old/: token.rs
server/src_old/controller/: server.rs
src/: .dockerignore  Cargo.toml  app.rs  main.rs  notification.rs  redis.rs  token.rs
src/app/: mod.rs
src/client/: Cargo.toml
src/client/examples/: send.rs
src/client/src/: lib.rs
src/clients/: geofencing.rs  mod.rs
src/collector/: Cargo.toml  Dockerfile  Dockerfileold
src/collector/src/: main.rs
src/collector/src/weather/: data.rs  mod.rs  smhi.rs  station.rs
src/contracts/src/: methods.rs
src/contracts/src/methods/: sas.rs  shape.rs
src/contracts/src/methods/server/: sleep.rs
src/contracts/src/methods/shape/: add_shape_tag.rs  add_shapes.rs  search_shapes_by_tags.rs
src/controller/: auth.rs  list.rs  mod.rs  mqtt.rs  prediction.rs  server.rs  shape.rs  user.rs
src/controllers/: geofences.rs  gis.rs  mod.rs  positions.rs  sleep.rs
src/database/: Cargo.toml
src/database/src/: lib.rs  list.rs  server.rs  shape.rs  user.rs
src/db/: mod.rs
src/gtfs/: Cargo.toml
src/gtfs/src/: lib.rs  main.rs  model.rs
src/gtfs/src/modes/: mod.rs  populate.rs  serve.rs
src/methods/: add.rs  bookmark.rs  geofencing.rs  math.rs  mod.rs  multiply.rs  prediction.rs  rpc.rs  sleep.rs  subtract.rs  user.rs
src/methods/mqtt/: controller.rs  mod.rs
src/methods/prediction/: add.rs  controller.rs  delete.rs  mod.rs  search.rs
src/methods/server/: controller.rs  mod.rs
src/methods/user/: add.rs  change_password.rs  controller.rs  mod.rs  validate.rs
src/model/: Cargo.toml
src/model/src/: lib.rs  methods.rs
src/model/src/methods/: shape.rs  traffic.rs  user.rs
src/model/src/methods/list/: add_list_item.rs  delete_list_item.rs  get_list_types.rs  rename_list_type.rs
src/model/src/methods/shape/: add_shape.rs  delete_shape.rs  get_nearby_shapes.rs  get_shape.rs  refresh_geo_points_in_cache.rs
src/model/src/methods/traffic/: get_departures.rs
src/model/src/methods/user/: add_user.rs  get_token.rs  get_user.rs
src/redis/: Cargo.toml
src/redis/src/: async_pool.rs  lib.rs  pool.rs  sync_pool.rs
src/routes/: goodbye.rs  hello.rs  mod.rs
src/server/: Cargo.toml  Dockerfile
src/server/bk/src/: controller.rs
src/server/examples/: token.rs
src/server/src/: app.rs  auth.rs  bin.rs  controller.rs  influx.rs  lib.rs  main.rs  token.rs
src/server/src/controller/: list.rs  server.rs  shape.rs  traffic.rs  user.rs
