[package]
name = "webserver"
version = "0.1.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.3", features = ["full"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.47"
log = "0.4"
pretty_env_logger = "0.3"
futures = "0.3.4"
chrono = "0.4.11"
structopt = "0.3.14"
webserver_database = { git = "https://github.com/ijagberg/webserver_database", branch = "main" }
webserver_contracts = { git = "https://github.com/ijagberg/webserver_contracts", branch = "main" }
uuid = "0.8.2"
jsonwebtoken = "7.2.0"
# redis = { version = "0.19", features = ["tokio-comp", "connection-manager"] }
hyper = { version = "0.14", features = ["full"] }
mobc-redis = "0.7.0"