[package]
name = "notifications"
version = "0.1.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.21"
redis = { version = "0.20.0", features = ["tokio-comp"] }
dotenv = "0.15.0"
tokio = { version = "1.3", features = ["full"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
pretty_env_logger = "0.4.0"
chrono = "0.4.11"
uuid = "0.8.2"
contracts = { path = "../contracts" }
database = { path = "../database" }
client = { path = "../client" }
futures-util = { version = "0.3.0", default-features = false }
futures = { version = "0.3.13", features = ["thread-pool"] }
