[package]
name = "methods"
version = "0.1.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"

[dependencies.db]
path = "../db"

[dependencies]
tokio = { version = "0.2", features = ["macros", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.47"
log = "0.4"
pretty_env_logger = "0.3"
chrono = "0.4.11"
ring = "0.16.13"