[package]
name = "client"
version = "0.1.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"

[dependencies]
isahc = { version = "1.1.0", features = ["json"] }
serde_json = "1.0.53"
contracts = { path = "../contracts" }
log = "0.4.14"
chrono = "0.4.19"
async-mutex = "1.4.0"

[dev-dependencies]
tokio = { version = "1.4.0", features = ["full"] }
