[package]
name = "collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.133"
serde_json = "1.0.75"
serde_derive = "1.0.133"
influxrs = "2.0.0"
clap = { version = "3.0.10", features = ["derive", "env"] }
isahc = { version = "1.6.0", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
futures = "0.3.19"
