[package]
name = "model"
version = "0.1.1"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.47"
chrono = "0.4.11"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
geojson = "0.22.0"
