[package]
name = "server"
version = "0.1.0"
authors = ["Isak Jägberg <ijagberg@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.3", features = ["full"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.47"
log = "0.4"
pretty_env_logger = "0.3"
futures = "0.3.4"
structopt = "0.3.14"
database = { path = "../database" }
model = { path = "../model" }
redis = { path = "../redis", features = ["async"] }
uuid = "0.8.2"
jsonwebtoken = "7.2.0"
hyper = { version = "0.14", features = ["full"] }
urlencoding = "1.1.1"
hmac = "0.11.0"
sha2 = "0.9.4"
base64 = "0.13.0"
influxrs = "1.0.0"
gtfs = { path = "../gtfs" }
isahc = { version = "1.6.0", features = ["json"] }
time = "0.3.7"
